ecmascript/parser/tests/test262-error-references/fail/ca27a03a9d04acd2.js.stderr
error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/test262-parser/fail/ca27a03a9d04acd2.js:1:22
  |
1 | "use strict"; (a) => 00
  |                      ^^

